grammar.js
        translation_unit: $ => optional(repeat1(
            $.external_declaration,
        )),

        /*
         * external_declaration :
         *   function_definition
         *   declaration
         *   SEMICOLON
         */
        function_definition: $ => seq(
            $.function_prototype,
            $.compound_statement_no_new_scope,
        ),

        /*
         * variable_identifier :
         *   IDENTIFIER
         *
         * primary_expression :
         *   variable_identifier
         *   INTCONSTANT
         *   UINTCONSTANT
         *   FLOATCONSTANT
         *   BOOLCONSTANT
         *   DOUBLECONSTANT
         *   LEFT_PAREN expression RIGHT_PAREN
         */
        _expression: $ => choice(
            $.primary_expression,
            $.function_call_expression,
            $.array_subscript_expression,
            $.field_select_expression,
            $.postfix_expression,
            $.prefix_expression,
            $.unary_expression,
            $.multiplicative_expression,
            $.additive_expression,
            $.shift_expression,
            $.relational_expression,
            $.equality_expression,
            $.and_expression,
            $.exclusive_or_expression,
            $.inclusive_or_expression,
            $.logical_and_expression,
            $.logical_xor_expression,
            $.logical_or_expression,
            $.conditional_expression,
            $.assignment_expression,
            $.sequence_expression,
        ),

        parenthesised_expression: $ => Expression.parenthesised($, $._expression),
        function_call_expression: $ => Expression.function_call($, $.function_call),
        array_subscript_expression: $ => Expression.array_subscript($, $._expression),
        field_select_expression: $ => Expression.field_select($, $._expression),
        postfix_expression: $ => Expression.postfix($, $._expression),
        prefix_expression: $ => Expression.prefix($, $._expression),
        unary_expression: $ => Expression.unary($, $._expression),
        multiplicative_expression: $ => Expression.multiplicative($, $._expression),
        additive_expression: $ => Expression.additive($, $._expression),
        shift_expression: $ => Expression.shift($, $._expression),
        relational_expression: $ => Expression.relational($, $._expression),
        equality_expression: $ => Expression.equality($, $._expression),
        and_expression: $ => Expression.bitwise_and($, $._expression),
        exclusive_or_expression: $ => Expression.bitwise_exclusive_or($, $._expression),
        inclusive_or_expression: $ => Expression.bitwise_inclusive_or($, $._expression),
        logical_and_expression: $ => Expression.logical_and($, $._expression),
        logical_xor_expression: $ => Expression.logical_xor($, $._expression),
        logical_or_expression: $ => Expression.logical_or($, $._expression),
        conditional_expression: $ => Expression.conditional($, $._expression),
        assignment_expression: $ => Expression.assignment($, $._expression),
        sequence_expression: $ => Expression.sequence($, $._expression),

        /*
         * function_call :
         *   function_call_or_method
         */
        function_call: $ => $.function_call_or_method,

        /*
         * function_call_or_method :
         *   function_call_generic
         */
        declaration: $ => choice(
            seq($.function_prototype, ';'),
            seq($.init_declarator_list, ';'),
            seq(
                'precision',
                $.precision_qualifier,
                $.type_specifier,
                ';',
            ),
            seq(
                $.type_qualifier,
                $.identifier,
                '{',
                $.struct_declaration_list,
                '}',
                optional(seq(
                    $.identifier,
                    optional($.array_specifier),
                )),
                ';',
            ),
            seq(
                $.type_qualifier,
                optional(seq(
                    $.identifier,
                    optional($.identifier_list),
                )),
                ';',
            ),
        ),

        /*
         * identifier_list :
         *   COMMA IDENTIFIER
         *   identifier_list COMMA IDENTIFIER
         */
        function_prototype: $ => seq(
            $.function_declarator,
            ')',
        ),

        /*
         * function_declarator :
         *   function_header
         *   function_header_with_parameters
         */
        parameter_declaration: $ => choice(
            seq(
                $.type_qualifier,
                choice(
                    $.parameter_declarator,
                    field('type', $.parameter_type_specifier),
                ),
            ),
            $.parameter_declarator,
            field('type', $.parameter_type_specifier),
        ),

        /*
         * parameter_type_specifier :
         *   type_specifier
         */
        init_declarator_list: $ => seq(
            field('type', $.fully_specified_type),
            optional(commaSeparated(field('variable', $.init_declarator))),
        ),

        init_declarator: $ => seq(
            field('name', $.identifier),
            optional($.array_specifier),
            optional(seq(
                '=',
                field('value', $.initializer),
            )),
        ),

        /*
         * fully_specified_type :
         *   type_specifier
         *   type_qualifier type_specifier
         */
        fully_specified_type: $ => seq(
            optional($.type_qualifier),
            $.type_specifier,
        ),

        /*
         * invariant_qualifier :
         *  INVARIANT
         */
        type_qualifier: $ => repeat1(
            $.single_type_qualifier
        ),

        /*
         * single_type_qualifier :
         *   storage_qualifier
         *   layout_qualifier
         *   precision_qualifier
         *   interpolation_qualifier
         *   invariant_qualifier
         *   precise_qualifier
         */
        storage_qualifier: $ => prec.right(choice(
            'attribute',
            'buffer',
            'centroid',
            'coherent',
            'const',
            'in',
            'inout',
            'out',
            'patch',
            'readonly',
            'restrict',
            'sample',
            'shared',
            'subroutine',
            'uniform',
            'varying',
            'volatile',
            'writeonly',
            seq(
                'subroutine',
                '(',
                $.type_name_list,
                ')',
            ),
        )),

        /*
         * type_name_list :
         *   TYPE_NAME
         *   type_name_list COMMA TYPE_NAME
         */
        type_specifier: $ => prec.left(seq(
            $.type_specifier_nonarray,
            optional($.array_specifier),
        )),

        /*
         * array_specifier :
         *   LEFT_BRACKET RIGHT_BRACKET
         *   LEFT_BRACKET conditional_expression RIGHT_BRACKET
         *   array_specifier LEFT_BRACKET RIGHT_BRACKET
         *   array_specifier LEFT_BRACKET conditional_expression RIGHT_BRACKET
         */
        array_specifier: $ => repeat1(seq(
            '[',
            optional($._expression),
            ']',
        )),

        /*
         * type_specifier_nonarray :
         *   basic_type
         *   struct_specifier
         *   TYPE_NAME
         */
        basic_type: $ => choice(...BASIC_TYPES),

        /*
         * precision_qualifier :
         *   HIGH_PRECISION
         *   MEDIUM_PRECISION
         *   LOW_PRECISION
         */
        precision_qualifier: () => choice(
            'highp',
            'mediump',
            'lowp',
        ),

        /*
         * struct_specifier :
         *   STRUCT IDENTIFIER LEFT_BRACE struct_declaration_list RIGHT_BRACE
         *   STRUCT LEFT_BRACE struct_declaration_list RIGHT_BRACE
         */
        struct_specifier: $ => seq(
            'struct',
            field('name', optional($.identifier)),
            '{',
            $.struct_declaration_list,
            '}',
        ),

        /*
         * struct_declaration_list :
         *   struct_declaration
         *   struct_declaration_list struct_declaration
         */
        struct_declaration: $ => seq(
            optional($.type_qualifier),
            $.type_specifier,
            $.struct_declarator_list,
            ';',
        ),

        /*
         * struct_declarator_list :
         *   struct_declarator
         *   struct_declarator_list COMMA struct_declarator
         */
        struct_declarator: $ => seq(
            $.identifier,
            optional($.array_specifier),
        ),

        /*
         * initializer_list :
         *   initializer
         *   initializer_list COMMA initializer
         *
         * initializer :
         *   assignment_expression
         *   LEFT_BRACE initializer_list RIGHT_BRACE
         *   LEFT_BRACE initializer_list COMMA RIGHT_BRACE
         */
        initializer: $ => choice(
            $._expression,
            $.array_initializer,
        ),
        array_initializer: $ => seq(
            '{',
            commaSeparated($.initializer),
            optional(','),
            '}',
        ),

        /*
         * declaration_statement :
         *   declaration
         */
        compound_statement: $ => seq(
            '{',
            optional($.statement_list),
            '}',
        ),

        /*
         * statement_no_new_scope :
         *   compound_statement_no_new_scope
         *   simple_statement
         */
        compound_statement_no_new_scope: $ => seq(
            '{',
            optional($.statement_list),
            '}',
        ),

        /*
         * statement_list :
         *   statement
         *   statement_list statement
         */
        expression_statement: $ => seq(
            optional($._expression),
            ';',
        ),

        /*
         * selection_statement :
         *   IF LEFT_PAREN expression RIGHT_PAREN selection_rest_statement
         */
        identifier: $ => choice(
            /[a-zA-Z_][a-zA-Z0-9_]*/,
            /[a-zA-Z_][a-zA-Z0-9_]*\\(\r|\n|\r\n)[a-zA-Z0-9_]+/,
        ),

        integer_constant: $ => choice(
            $.decimal_constant,
            $.octal_constant,
            $.hexadecimal_constant,
        ),
        decimal_constant: () => /[1-9][0-9]*[uU]?/,
        octal_constant: () => /0[0-7]*[uU]?/,
        bool_constant: () => choice('true', 'false'),

        /*
         * https://www.khronos.org/registry/OpenGL/specs/gl/GLSLangSpec.4.60.html#floats
         *
         * floating_suffix : one of
         *   f F lf LF
         *
         * digit_sequence :
         *   digit
         *   digit_sequence digit
         *
         * sign :
         *   MINUS
         *   PLUS
         *
         * epxonent_part :
         *   e digit_sequence
         *   e sign digit_sequence
         *   E digit_sequence
         *   E sign digit_sequence
         *
         * fractional_constant :
         *   digit_sequence DOT digit_sequence
         *   digit_sequence DOT
         *   DOT digit_sequence
         *
         * floating_constant :
         *   fractional_constant
         *   fractional_constant exponent_part
         *   fractional_constant floating_suffix
         *   fractional_constant exponent_part floating_suffix
         *   digit_sequence exponent_part
         *   digit_sequence exponent_part floating_suffix
         */
        float_constant: () => token(seq(
            choice(
                /[0-9]+\.[0-9]+/,
                /\.[0-9]+/,
                /[0-9]+\./,
                /[0-9]+/,
            ),
            optional(/[eE][-+]?[0-9]+/),
            optional(choice('f', 'F', 'lf', 'LF')),
        )),

        // https://github.com/tree-sitter/tree-sitter-c/blob/88592f162e218e3d0de28f1e5d1835e6ef2c57b6/grammar.js#L966
